--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,8 +22,12 @@
                  to determine the Window background behind the Flutter UI. -->
                  <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-        <category  android:name="android.intent.category.LEANBACK_LAUNCHER"/>
-         <category android:name="android.intent.category.LAUNCHER"/>
+        <!-- <category android:name="android.intent.category.HOME" /> -->
+				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.LAUNCHER_APP" />
+				<category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.HOME" />
  </intent-filter>
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
