--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   go_router: ^13.0.1
   http: ^1.1.2
+  installed_apps: ^1.4.0
   one_clock: ^1.0.9
   url_launcher: ^6.2.2
 
