--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.INTERNET" /> 
 <uses-feature android:name="android.software.leanback"
         android:required="false" />
             <uses-feature android:name="android.hardware.touchscreen"
               android:required="false" />
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:label="android_tv_app"
         android:banner="@drawable/logo_banner"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+     
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -16,18 +21,21 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
+
+
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
                  while the Flutter UI initializes. After that, this theme continues
                  to determine the Window background behind the Flutter UI. -->
                  <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <!-- <category android:name="android.intent.category.HOME" /> -->
-				<category android:name="android.intent.category.LAUNCHER" />
-				<category android:name="android.intent.category.LAUNCHER_APP" />
-				<category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.HOME" />
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER_APP" />
+                <category android:name="android.intent.category.LAUNCHER" />
+
  </intent-filter>
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
@@ -38,6 +46,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
