--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.2
+  chewie: ^1.8.1
   cupertino_icons: ^1.0.2
   external_app_launcher: ^3.1.0
   flutter:
@@ -38,6 +39,7 @@ dependencies:
   http: ^1.1.2
   installed_apps: ^1.4.0
   one_clock: ^1.0.9
+  path_provider: ^2.1.3
   url_launcher: ^6.2.2
   video_player: ^2.8.2
   youtube_player_flutter: ^8.1.2
